# pbl2024-2024-team9_frontend

./: .gitignore  README.md
clipboard-sync/: .env.in  Cargo.toml  README.md  schema.sql  server.py
clipboard-sync/src/: main.rs
daemon/: CMakeLists.txt
daemon/src/: main.cpp
daemon/src/platform/: daemoner.h  daemonerandroid.cpp  daemonermacos.cpp  daemonerwindows.cpp
uniclipboard/: CMakeLists.txt
uniclipboard-android/: settings.gradle
uniclipboard-android/app/: build.gradle
uniclipboard-android/app/src/androidTest/java/com/example/uniclipboard/: ExampleInstrumentedTest.java
uniclipboard-android/app/src/main/: AndroidManifest.xml
uniclipboard-android/app/src/main/java/com/example/uniclipboard/: HomePageActivity.java  Item.java  MainActivity.java  RegisterActivity.java
uniclipboard-android/app/src/main/res/drawable/: box_frame.xml
uniclipboard-android/app/src/main/res/layout/: activity_home_page.xml  activity_main.xml  activity_register.xml
uniclipboard-android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
uniclipboard-android/app/src/main/res/values-night/: themes.xml
uniclipboard-android/app/src/test/java/com/example/uniclipboard/: ExampleUnitTest.java
uniclipboard-android/gradle/: libs.versions.toml
uniclipboard-android/gradle/wrapper/: gradle-wrapper.properties
uniclipboard-linux/: README.md  clip.sh  clip_board.sh  get_all_item.sh  gui.py  install_rightclick_menu.sh  paste.sh  rightclick_menu.desktop
uniclipboard/include/: copy.h  gui.h  install.h  netutil.h  paste.h  user.h  util.h
uniclipboard/src/: copy.cpp  gui.cpp  install.cpp  main.cpp  netutil.cpp
